--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,9 +12,10 @@ dependencies:
 
   cupertino_icons: ^0.1.3
   animated_text_kit: ^1.3.0
+
   firebase_core: ^0.5.0
   firebase_auth: ^0.18.0+1
-  cloud_firestore: ^0.14.0+2
+#  cloud_firestore: ^0.14.0+2
 
 dev_dependencies:
   flutter_test:
